--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.13",
     "autocannon": "^7.9.0",
+    "forever": "^4.0.3",
+    "pm2": "^5.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   },
   "scripts": {
     "dev": "ts-node-dev --transpile-only --respawn --ignore-watch node_modules ./src/server.ts",
-    "start": "node ./build/index.js",
+    "start:dev": "forever ./build/server.js && forever list",
+    "start:dev2": "pm2 delete myapp && pm2 start ./build/server.js --name myapp && pm2 monit",
+    "start:prod": "node ./build/index.js",
     "prebuild": "rm -rf ./build",
     "build": "rm -rf ./build && tsc",
-    "test": "yarn autocannon -c 500 -d 30 --workers 10 --renderStatus --latency --warmup [ -c 1 -d 2] localhost:5000"
+    "test": "autocannon -c 500 -d 30 --workers 10 --renderStatus --latency --warmup [ -c 1 -d 2] localhost:5000"
   }
 }
