--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.13",
     "autocannon": "^7.9.0",
-    "forever": "^4.0.3",
     "pm2": "^5.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
@@ -41,6 +40,7 @@
     "start:prod": "node ./build/index.js",
     "prebuild": "rm -rf ./build",
     "build": "rm -rf ./build && tsc",
-    "test": "autocannon -c 500 -d 30 --workers 10 --renderStatusCodes --latency --warmup [ -c 1 -d 2] localhost:5000"
+    "test": "autocannon -c 500 -d 30 --workers 10 --renderStatusCodes --latency --warmup [ -c 1 -d 2] localhost:5000",
+    "test:deps": "audit"
   }
 }
